kubernetes-deployments/applications/linkding/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
            limits:
              cpu: 250m
              memory: 400Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data
