kubernetes-deployments/applications/linkding/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: linkding
  type: ClusterIP
